Fix visual bug with remember checkbox on mobile.
Fixes #5054

--- a/modules/backend/assets/less/layout/outerlayout.less
+++ b/modules/backend/assets/less/layout/outerlayout.less
@@ -78,6 +78,9 @@ body.outer {
                         label {
                             color: @color-outer-muted-text;
                         }
+                        input {
+                            display: none;
+                        }
                     }
 
                     .forgot-password {
